Fix bug where the cursor would jump

--- a/src/app/components/EditableTd/styles.css
+++ b/src/app/components/EditableTd/styles.css
@@ -3,8 +3,3 @@
 	height: 2rem;
 	cursor: default;
 }
-
-/* .NLT__td:focus-visible {
-	border: 1px solid blue;
-	border-style: double;
-} */
